# ai-study-buddy

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  studybuddy.db
backend/routes/: chat.py
backend/services/: embedding_service.py  llm_service.py  mastery_service.py  pdf_service.py  qdrant_service.py  quiz_service.py  retrieval_service.py  topic_service.py
frontend/: package-lock.json  package.json
frontend/.claude/: launch.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatWindow.tsx  MaterialsList.tsx  QuizModal.tsx  TopicsList.tsx  UploadZone.tsx
frontend/lib/: api.ts
