[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-study-buddy"
version = "0.1.0"
description = "AI-powered RAG study tutor"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "groq==0.13.1",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "pydantic==2.9.0",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "fastembed==0.5.0",
    "qdrant-client==1.12.1",
    "pdfplumber==0.11.2",
]
